content/_generated-doc/3.6/config/quarkus-liquibase-liquibase-build-time-config.adoc

:summaryTableId: quarkus-liquibase-liquibase-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-liquibase-liquibase-build-time-config_configuration]]link:#quarkus-liquibase-liquibase-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-liquibase-build-time-config_quarkus.liquibase.change-log]]`link:#quarkus-liquibase-liquibase-build-time-config_quarkus.liquibase.change-log[quarkus.liquibase.change-log]`


[.description]
--
The liquibase change log file. All included change log files in this file are scanned and add to the projects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE_CHANGE_LOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE_CHANGE_LOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|`db/changeLog.xml`


a|icon:lock[title=Fixed at build time] [[quarkus-liquibase-liquibase-build-time-config_quarkus.liquibase.-named-data-sources-.change-log]]`link:#quarkus-liquibase-liquibase-build-time-config_quarkus.liquibase.-named-data-sources-.change-log[quarkus.liquibase."named-data-sources".change-log]`


[.description]
--
The liquibase change log file. All included change log files in this file are scanned and add to the projects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_LIQUIBASE__NAMED_DATA_SOURCES__CHANGE_LOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_LIQUIBASE__NAMED_DATA_SOURCES__CHANGE_LOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|`db/changeLog.xml`

|===